--- a/gb/news2007_2.md
+++ b/gb/news2007_2.md
@@ -24,17 +24,7 @@
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/13/n11719794.md#1" target="_blank">问王羲之“入木三分” 笔力如何造就？</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/13/n11719794.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/02/bda4db1c72f1b4b84a6568a65bfb1393-150x120.jpg" align ="left"></a>“入木三分”成语来自哪个名家真实故事？后人借此成语来比喻评论深刻中肯，或是描写精到生动。“入木三分”本是形容什么呢？“入木三分”其来有自，是扎扎实实的突破表层深入内里的功夫！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:40 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/19/n11731965.md#1" target="_blank">天地清明引(147) 东流水－君臣生隙3</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/19/n11731965.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/07/1207040111051680-150x120.jpg" align ="left"></a>话说郭络罗严查官员，裁撤下去不少武平王府旧臣。论及王府用人之道，自是赏罚分明，选贤任能。此次严审之事，遭打压者多是刚直不阿的勇将志士，闲赋在家，颇多牢骚。郭络罗打着督导之名号，亲自上门，挨家挨户的拉拢。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/21/n11737599.md#1" target="_blank">宠辱不惊 德才兼备的班婕妤</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/21/n11737599.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/liang-na-2-150x120.jpg" align ="left"></a>班婕妤（公元前48年—公元2年），是西汉女辞赋家，名不详，楼烦人（今山西朔城区）。班氏为楚国令尹子文的后代、越骑校尉班况之女。与司马迁齐名的东汉史学家、《汉书》的作者班固和投笔从戎的班超及《女诫》的作者班昭，都是班婕妤的家族晚辈。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:58 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/27/n11748750.md#1" target="_blank">实战风水术专栏讲座系列之一</a><br></h3>
-
-咦？是谈“精神”文化吗？不是，谈“金神”文化。
-
-并且，谈中国文化，固然是专门指磁“器”文化，才代表China吧？
-
-非也，磁“气”文化才是中国人的本色，并且磁“器”，在性质与价值上都难与磁“气”相提并论！
-
-气的一个最高层级的涵意，是指“能量”。
-
-中国民族原本是一个深知磁能量的民族，并且，极.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 3:19 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/22/n11738991.md#1" target="_blank">4.25事件与江泽民命盘之间的宿命联系</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/22/n11738991.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/03/1311100851062158-150x120.jpg" align ="left"></a>1999年对于法轮功学员来说是祸从天降的一年，从7月20日开始了20年来无辜被害的不幸命运和英勇惨烈的抗争。迄今为止大多数的法轮功学员根本不明白为什么突然之间江泽民集团开始迫害法轮功，怎么好好地炼炼气功就成了被中共官方定义为“邪教”而要赶尽杀绝的对象呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:13 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11746987.md#1" target="_blank">唐浩：勿信勿迷</a><br></h3>赤龙乱尘喷迷毒   斗争世人惑坠雾   金银藏祸瞒欲心   幻梦倏醒断生路......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 12:07 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745239.md#1" target="_blank">五律：酒（三）</a><br></h3> 常解红尘意，万缘都是情。 愁时同泣泪，喜处与欢声。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 10:11 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745115.md#1" target="_blank">唐浩：香江预</a><br></h3>恶法连连无底线   邪丑癫狂舞黑剑   众业缠身妖自焚   红霾消溃故园现......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 12:11 AM			</td></tr>
