--- a/gb/news2008_5.md
+++ b/gb/news2008_5.md
@@ -1,4 +1,12 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/wrrxl289/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wrrxl289/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/16/n11726288.md#1" target="_blank">【胡乃文开讲】熬夜1天需要恢复11天？中医师教你迅速入眠</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/16/n11726288.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/sleep-hunaiwen2-1216-150x120.jpg" align ="left"></a>你知道吗？熬夜一天要用11天才能补足元气。
+
+长期熬夜的人，肝和胆不能得到很好的保养。肝管情绪中的“怒”，所以常常晚睡觉或睡不饱的人，似乎很容易发脾气。肝胆不养好，会连带影响脾胃、肾、心等脏腑的健康。在中医看来，每天晚上要在子时（晚上11点）之前入睡。2味药膳，帮你迅速入睡。睡眠浅、容易醒？4个穴位助你进入深眠......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 6:30 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/16/n11726516.md#1" target="_blank">【爸妈必修课】哺乳的烦恼 妈妈被咬怎么办？</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/16/n11726516.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dfa6cb86e45356_ttl7dayo7T_shutterstock_1289756599-150x120.jpg" align ="left"></a>：母乳喂养应注意什么？喂母乳时，宝宝咬奶头怎么办？
+
+本文刊载于旧金山12月14日教育版
+每周为您献上旧金山最新消息
+责任编辑：李欧......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 1:50 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/16/n11726317.md#1" target="_blank">“银色海啸”为加州住房危机带来解药？</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/16/n11726317.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dfdec6ab2a97bc_ttl7dayrUn_shutterstock_1039455271-150x120.jpg" align ="left"></a>近期线上房地产数据公司Zillow释出一份研究指称，未来20年中（截至2037年），美国婴儿潮世代的银发族们，将持续释出约2100万套空房，数量堪比2000年代中期的上市量。听起来似乎能缓解自经济复苏以来，全美越来越紧张的住房需求。难道这也是加州，乃至旧金山湾区住房危机的一剂解药吗？
 迎来“银色海啸”
 那么2100.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 11:54 PM			</td></tr>
@@ -40,8 +48,6 @@ Jason .........<br><img align="bottom" src="http://www.epochtimes.com/assets/the
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/14/n11722083.md#1" target="_blank">嚷嚷多时 自动驾驶车何时才能上路？</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/14/n11722083.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Tu1_Waymo_shutterstock_1117897193-150x120.jpg" align ="left"></a>试图把自驾车带给大众的公司比以往任何时候都多，然而，截至目前，这个企图并未真正实现。目前尚不清楚到底能不能到来，或何时到来？据研调机构的预测，自2023年止，全球配备自动驾驶相关硬件的车辆将增加74万台，但目前全球仍没有任何国家颁布相关法规，允许可量产的自驾车合法上路。
 
 业内支持者，包括特斯拉（Tesla）CEO.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 8:18 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/10/n11713754.md#1" target="_blank">27岁女孩罹子宫颈癌 女性应该做1个检查</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/10/n11713754.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Cervical-cancer2-1113-150x120.jpg" align ="left"></a>布姆豪尔希望自己的故事能提醒其他女性认识子宫颈癌。“我不仅仅是患癌，还因此失去生育自己孩子的机会??”布姆豪尔以自己的亲身经历再次提醒人们，“请去做个子宫颈抹片检查吧。”子宫颈癌，多数因性传播病毒HPV引起。少数子宫颈癌与HPV感染无关，恶性度可能更高。子宫颈抹片检查和HPV检查可以帮助预防和早期发现子宫颈癌......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 3:26 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/12/n11718645.md#1" target="_blank">【梁厨美食】烤火鸡腿杂菜─感恩家常菜</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/12/n11718645.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/61218ad5ace18b56ddb84b5f829cca05-150x120.jpg" align ="left"></a>烤火鸡腿杂菜轻松上桌；鸡腿去骨，肉切成厚片，蔬菜放碟中，上面铺上鸡肉淋上酱汁便可上桌......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 10:41 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/9/n11710365.md#1" target="_blank">【AUSTPRO珀斯房地产专栏】2020年珀斯5个投资热点</a><br></h3>根据多家房地产投资专家分析，2020年珀斯房地产市场将迎来微小的涨幅，房产中位价的涨幅可能低于2%。然而，租房市场异常活跃，珀斯平均租金涨幅为5.7%，创下近3年来的最佳表现。本期专栏，我们以租金收入回报率为准，分析珀斯5个2020年最值得投资的地区。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 11:09 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/9/n11710336.md#1" target="_blank">西澳政府注资1.5亿澳元刺激房市</a><br></h3>作为推动经济的一个部分，西澳政府融资1.5亿澳元用以社会福利房。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 11:08 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/9/n11710283.md#1" target="_blank">西澳南珀斯塔楼项目终获批</a><br></h3>经过了一年法庭调解与开发方案的修正，本地开发商Sirona Capital拟在南珀斯承建大型公寓项目的开发申请终于获批，日前，开发商开启了楼花预售营销活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 11:07 PM			</td></tr>
