--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -23,7 +23,8 @@
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/23/n11741306.md#1" target="_blank">王友群：中共“战狼外交”在瑞典踢到铁板</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/23/n11741306.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1182587939-600x400-150x120.jpg" align ="left"></a>2019年，是中共“战狼外交”又一年。其中，最典型的代表人物，莫过于中共驻瑞典大使桂从友了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 4:38 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/23/n11741286.md#1" target="_blank">张菁：山西农村封炉封灶尽显中共无良</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/23/n11741286.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/84ba374e317fd1b46d0d1b913852bbad-600x400-150x120.jpg" align ="left"></a>共产党建政70年来，传统的信仰和价值观被强力破坏了，可见如果想拥有心中的自由和幸福，拥有不被控制的真正人的生活，必须得去除共产党的因素。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 4:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/23/n11740733.md#1" target="_blank">谢田：新冷战和旧冷战的三大不同</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/23/n11740733.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1177975938-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" align ="left"></a>当今世界从政界到知识界、商界、业界，人们普遍认为，美国和中共的对峙，近年来已全面展开、迅速升级，可称之为一场新的冷战了。史丹佛大学胡佛研究所尼尔．弗格森（Niall Ferguson）研究员认为，第二次冷战在未来历史学家的眼里，会是从2019年开始的。在笔者看来，新冷战最明确的信号，应该是北大西洋公约组织（北约）在伦敦.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 1:29 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/23/n11740076.md#1" target="_blank">程晓容：上海囚徒求救信再揭中共奴工黑幕</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/23/n11740076.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/2019-5-21-fox-11-program_08-ss-150x120.jpg" align ="left"></a>求救信见诸媒体的同一天，卡片销售商、英国最大零售商乐购（Tesco）迅速做出回应，宣布暂时停止在中国的一家工厂的生产，并展开调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 7:24 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11744948.md#1" target="_blank">云鹤天：《采桑子?重阳》新解</a><br></h3>贪官污吏黄赌毒，你也寻芳，他也寻芳，罂粟花儿分外香。
+今年过得真没劲，输得精光，陪得精光，贸战香江雪上霜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 7:41 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11744758.md#1" target="_blank">文武：弹劾川普是在帮中共的忙</a><br></h3>前几天我有个认识的人，突然跑到我的工作室来，说美国总统川普被弹劾了，川普下台了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 6:16 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11744745.md#1" target="_blank">郑纯清：从“挨门砸饭锅”到“挨户堵炉眼”</a><br></h3>二零二零年，实现小康年。
 小康什么样？前后比比看。
