--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -1,4 +1,18 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/wrrxl289/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wrrxl289/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747752.md#1" target="_blank">中科大副校长被指与中共军企合作 曾遭美拒签</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747752.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-458179366-150x120.jpg" align ="left"></a>今年年初美签被拒的中国量子科学家潘建伟被指与中共军方企业有关系，同时他还有与西方大学的密切合作关系。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:48 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747628.md#1" target="_blank">滥用“精神病” 大陆排查病患被指侵犯人权</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747628.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2010-4-17-minghui-persecution-191359-0-150x120.jpg" align ="left"></a>在中国大陆，“被精神病”成为中共惯用的维稳手段。专家指出，精神病的排查被滥用，往往成为政治迫害的工具，而由于精神卫生医疗条件和专业化的限制，很多真正的精神病人却很难被救治。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:31 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11746496.md#1" target="_blank">九位老人一起读法轮功著作 被构陷到检察院</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11746496.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2004-11-2-zfl-2-150x120.jpg" align ="left"></a>陕西省岐山县公安局调动30多名警察，于7月10日绑架了在一起学习法轮功著作的九位老人，非法抄家，抢劫私人财物。其中徐明侠、焦炳兰、亚兰、沈红奇一直被非法关押、构陷，邵启虎等五位老人被取保候审后放回家，目前也被构陷到检察院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:07 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747584.md#1" target="_blank">置业者购房能力数据  一窥大陆民众收入概况</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747584.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/02/1002121143571813-150x120.jpg" align ="left"></a>近日一份调查显示，大陆购房置业的受访者中，超过一半只能接受最低价位选项（100万以下），近日有中国学者和社科院报告都提到中国民众收入问题表现在贫富差距大，家庭负债多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 6:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11744047.md#1" target="_blank">“你的密码归党管” 中共密码法明年上路</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11744047.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/12-24-password-Cover02-150x120.jpg" align ="left"></a>从明年1月1日开始，中共政府就将开始实施“密码法”，规定所有网络密码由国家统一管理。按照中共国家密码管理局的说法，要坚决贯彻“党管密码”的根本原则，违反者可能背负刑事责任，而民事罚款最高可达100万人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 6:41 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747582.md#1" target="_blank">分析：美中贸易战 明年进入三个关键期</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747582.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1180493925-1-600x400-1-150x120.jpg" align ="left"></a>2020年是观察美中贸易关系更重要的一年，专家说，兑现承诺比谈判更为困难，明年进入三个关键期。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:55 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747231.md#1" target="_blank">【新闻看点】内幕：华为产品价格为何低廉？</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747231.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/f8e70f9b0207db46a17f73028300f77d-150x120.jpg" align ="left"></a>今天（12月26日）华尔街日报连发两篇文章，深度起底华为产品价格低的内幕，拆穿了华为的谎言。是中共的几百亿美元寄养，支持着“巨婴”成长。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:00 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747020.md#1" target="_blank">中共无孔不入  台学者：反渗透法绝对必要</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747020.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/16ae24f9ef5840a5c41034d202152fe2-150x120.jpg" align ="left"></a>民进党团预计在本月31日，于立法院三读通过“反渗透法”，学者认为，台湾遭中共无孔不入的入侵，“台湾不应让中共渗透变成合法的情况，绝对有立该法的必要性。”专家也说，随着“反渗透法”即将进入三读的程序，许多政治人物纷纷对此表态，“这就好像是照妖镜，把许多人的红色背景照出来，让老百姓加以检视他们的立场。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 4:57 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747230.md#1" target="_blank">【新闻看点】感激——美国人的年度关键词</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747230.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2004/01/401014827628-150x120.jpg" align ="left"></a>美国一家机构最近对1000多人调查，想了解人们对过去一年和目前的生活感受。结果高达70%的受访者选择了“感激（grateful）”，认为美国经济表现良好。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 4:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11746133.md#1" target="_blank">决战2020 章天亮：为中共垮台做哪些准备？</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11746133.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/0f1c76ebde26d51b8c549fc56e4a3e31-150x120.jpg" align ="left"></a>大纪元新唐人媒体集团12月21日举办“决战2020 时事论坛”，美国飞天大学人文与科学副教授章天亮以“我们应该为中共垮台做哪些准备？”为题分享对国际时事的观察。他表示，中国的经济在三个问题上已经进入死胡同，分别是美中贸易战、香港问题和民企国有化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 4:06 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747545.md#1" target="_blank">300万人以下城市取消落户限制 刺激经济？</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747545.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/04/1204250943522343-150x120.jpg" align ="left"></a>中国经济全面降速，冲击就业之际，中共当局提出松绑劳动力流动限制的计划，其中包括全面取消常住人口300万以下城市落户限制，并放宽常住人口300万至500万人的大城市落户条件。分析认为，中共急于对户籍制度进行松绑，是迫于无奈。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 3:13 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747380.md#1" target="_blank">大陆上市公司业绩差 年末24家“卖房筹资”</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747380.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/03/1305311027192519-150x120.jpg" align ="left"></a>大陆上市公司卖房潮持续，仅第四季度就有至少24家公司出售房产筹资，多数公司处于亏损状态。两家汽车企业（海马汽车和曙光股份）分别是卖房数量和金额最高，央企国企的整体卖房规模较大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 2:27 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747344.md#1" target="_blank">临沂监狱欲盖弥彰？王全璋健康堪忧</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747344.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-19-150x120.jpg" align ="left"></a>卷入709事件而被判刑入狱的维权律师王全璋，健康状况一直备受外界关注。周四（26日）他向探监的妻子李文足重申，自己一切正常，但种种迹象却显示情况刚好相反，而山东临沂监狱却刻意掩饰。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 1:38 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747186.md#1" target="_blank">香港黄店排长队吃免费大餐 力撑理大厨房佬</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747186.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/191226055742100484-150x120.jpg" align ="left"></a>光荣冰室与理大保卫战中做饭的厨房佬合作推出25日晚圣诞大餐，尽管厨房佬圣诞之夜被捕，但前来支持这项活动的人排长队，他们表示无论厨房佬在哪里，但心跟他们在一起。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 1:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747387.md#1" target="_blank">圣诞佳节：别忘记失去自由的维权人士</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747387.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/image-3-150x120.jpg" align ="left"></a>在圣诞佳节，关注中国劳工权益的英文网上期刊《中国制造》（Made in China Journal）发表文章，提醒读者不要忘记一班现在仍然失去自由的中国维权人士。文章列举其中几位维权人士，呼吁社会要继续关注他们的处境。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 1:04 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11744864.md#1" target="_blank">法轮功学员沈子力生前遭受的经济迫害</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11744864.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-19-150x120.jpg" align ="left"></a>齐齐哈尔法轮功学员沈子力于2007年2月27日被迫害致死，距今近13年。在中共疯狂的迫害中，沈子力遭受了残酷的肉体和精神折磨，以及经济上的严重迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 11:59 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747263.md#1" target="_blank">“痛风酒”老板大谈长寿之道 突然猝死台上</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11747263.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-18-150x120.jpg" align ="left"></a>近日中国微博上流传一段影片，一名老板在台上演讲谈长寿之道，却突然猝死在舞台上。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 11:49 PM							</td></tr>
@@ -10,24 +24,10 @@
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11746509.md#1" target="_blank">圣诞节购物旺季 港人聚焦“黄色经济圈”</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11746509.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/A7A01488-150x120.jpg" align ="left"></a>每年圣诞节都是民众购物消费的最佳时机。在反送中运动笼罩下的香港圣诞节，人们除了继续抗争外，外出消费购物时也会选择“黄店”还是“蓝店”。此外，由于支持抗争者的“星火同盟”基金遭港警冻结、成员被拘捕，有关“黄色经济圈”的话题更成为这次圣诞节的谈论焦点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 6:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11745793.md#1" target="_blank">美媒首次披露 中共援助华为750亿美元</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11745793.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/Huawei-1128822574-600x400-1-150x120.jpg" align ="left"></a>中国华为公司从没没无闻的电话交换机供应商，转身成为全球知名的电信供应商。据美媒的首次分析，披露中共补助华为的数百亿美元，是该公司击败对手取得不公平竞争优势的主要原因。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 3:35 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745421.md#1" target="_blank">X射线机辐射超标 重庆一医院十多名职工患癌</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745421.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-175051588-150x120.jpg" align ="left"></a>重庆市沙坪坝区中医院有17名职工患癌。其中一台移动X射线机辐射疑超标8000倍。一患癌医生怀疑，医院癌症高发生率与电离辐射泄漏有关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 10:39 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745733.md#1" target="_blank">大陆44家民企变国企 国资入股业绩受关注</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745733.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/02/1401312212562068-150x120.jpeg" align ="left"></a>截至12月25日，大陆有44家上市公司的实际控制人变更为国资系，即民营企业变成国有企业控股。去年被国资系入股的上市公司的业绩表现，令市场更关注今年股权变更后的公司业绩表现。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 8:52 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745711.md#1" target="_blank">揭抚顺丑闻后 花千芳又剑指广州遭讥讽</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745711.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/80832240_514425755830972_199441371939995648_n-150x120.jpg" align ="left"></a>中共“高级五毛”花千芳在曝光抚顺市政府丑闻后，日前再揭广州当局“崇洋媚外”，引发网民关注和热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 8:15 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745594.md#1" target="_blank">分析：价值观冲突令中国品牌国际地位低</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745594.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/060fab95ddbb0c11d145f09138cad61e-150x120.jpg" align ="left"></a>《金融时报》专栏作家刘裘蒂12月25日发表文章表示，国际受访者对中国品牌的信任度正在降低，中国品牌要自问代表什么样的价值观，要认识到美国绝对不是唯一对中国企业防范的国家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 7:16 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745418.md#1" target="_blank">卖假笔记本电脑电池 美华人或坐牢50年</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745418.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/b7798355ec5646f32805f38dbb8e96f0-150x120.jpg" align ="left"></a>美国司法部两天内密集刊出三条起诉中国产假货的公告，当事人涉嫌通过电子商务平台、直接对美国的消费者进行售卖。假货类别覆盖科技产品，如笔记本电脑电池，也有常见的流行饰品，如珠宝或太阳镜，甚至还有减肥以及男性伟哥类产品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 6:08 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/24/n11743469.md#1" target="_blank">【新闻看点】圣诞祝福 全球网友寄语香港</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/24/n11743469.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912240928582478-150x120.jpg" align ="left"></a>12月7日，我们发起了《2020：寄语香港》活动。目的是给大家提供一个平台，用诗文乐画的方式，向香港人送上一份新年祝福。活动开始后，我们陆续收到了很多朋友们的Email，都希望通过新闻看点，向香港人传递一份祝福。因为实在太多了，所以决定分为上下两个部分播出。今天播出上半部分，然后元旦当天再播出下半部分。即使这样，一些朋友太长的文字祝福，也只能撷取其中精华部分.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 5:50 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/24/n11743411.md#1" target="_blank">中共尽失人心 反习势力与保习派激战</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/24/n11743411.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/11/1211290826301497-150x120.jpg" align ="left"></a>中共内外交困之际，中共各派围绕习近平是否将连任等问题展开激战。习成为各派保护和攻击的中心，中共各种不利的消息也都推给了习，习将如何面对这些困局？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 5:33 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745643.md#1" target="_blank">【预告】新唐人圣诞节期间播出电影《归途》</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745643.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/0d2b09f7df0e78900d26a02647216a96-150x120.jpg" align ="left"></a>2019圣诞节期间，新唐人将独家播出根据真人真事改编的电影《归途 》（Origin Bound）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 5:16 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745357.md#1" target="_blank">李小龙女儿起诉大陆真功夫餐厅 索赔逾2亿元</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745357.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1910180847022188-150x120.jpg" align ="left"></a>12月25日，以李小龙女儿Shannon Lee（中文名：李香凝）为法人代表的李小龙有限责任公司（Bruce Lee Enterprises, LLC），向上海市第二中级法院提起侵权诉讼，向使用酷似李小龙形象图标长达15年的大陆餐饮品牌“真功夫”索赔2.1亿元（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 4:32 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745512.md#1" target="_blank">中国app失去控制权 印度人重新主导本地市场</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745512.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1182408018-150x120.jpg" align ="left"></a>曾一度，来自中国的应用程序充斥印度商店。去年，在印度排名前100的安卓应用中，多达44个是由中国公司开发。如今，这种情况已经发生变化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 4:23 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745408.md#1" target="_blank">陆企逾1300亿违约创纪录 官称明年更难</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745408.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1312310333481528-600x400-150x120.jpg" align ="left"></a>大陆今年以来债务违约规模创下新高，近70家企业的170多只债券发生违约，超过千亿的违约金额超过去年全年，有多家企业年内违约至少5次，涉及国企和民企。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 2:56 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745443.md#1" target="_blank">摩托车横穿李克强车队 险酿意外</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745443.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-17-150x120.jpg" align ="left"></a>中日韩领导峰会12月24日在四川成都登场，但中间却发生一起意外，中日韩领导人车队在成都街头驶过时，一个摩托车直接从领导人车队中穿过，险酿意外。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 1:56 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745406.md#1" target="_blank">中共发文严防规模性失业抗争 预示失业潮？</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745406.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/02/902202223371663-150x120.jpg" align ="left"></a>14日，中共国务院发文件，称要“全力防范化解规模性失业风险”，“各地区要第一时间处置因规模性失业引发的群体性突发事件”的消息引发各界关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 1:53 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745305.md#1" target="_blank">涉收受中国博彩企业贿金 日本众议员被捕</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745305.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/12/1212160916152519-150x120.jpg" align ="left"></a>日本内阁府前副大臣、自民党众议员秋元司（Tsukasa Akimoto）因涉嫌接受中国博彩企业贿赂，周三（12月25日）遭东京地检特搜部逮捕。这是自2010年以来在日本首次因涉嫌违法逮捕现任国会议员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 1:15 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11745929.md#1" target="_blank">【翻墙必看】海内外言论指向习</a><br></h3>中共内外交困之际，中共各派围绕习近平是否将连任等问题展开激战。习成为各派保护和攻击的中心，中共各种不利的消息也都推给了习，习将如何面对这些困局？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 9:55 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11746965.md#1" target="_blank">广东小客车与三轮车相撞又撞树起火 7死2伤</a><br></h3>12月26日上午10时30分左右，广东连州市一辆小型普通客车在丰阳镇湖江村路段，与一辆三轮车相撞。两车碰撞后，该辆小型普通客车再撞上路边树干、并起火，导致7死2伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 8:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11746918.md#1" target="_blank">今天日偏食 湖北四川发生地震</a><br></h3>12月26日晚间，湖北孝感市应城市发生4.9级地震。武汉、荆州、黄石、襄阳、河南信阳等多地有明显震感。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 8:18 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11746539.md#1" target="_blank">中国多省进入流感流行期 甲型流感为主</a><br></h3>近期，中国大陆部分省份已进入流感流行季节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 5:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/26/n11746220.md#1" target="_blank">湖北一女婴被丢垃圾桶4小时 仍无父母下落</a><br></h3>近日，湖北黄石市一名刚出生不久的女婴，被父母遗弃在垃圾桶内4个多小时，后被环卫工人发现、并送院抢救。但目前仍未找到其父母。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 2:25 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745633.md#1" target="_blank">周杰伦MV奶茶店 大陆现110多家山寨门市</a><br></h3>由歌手周杰伦MV捧红的奶茶店，如今在中国遭到山寨包围。全中国目前有110多家山寨的“麦吉 machi machi”加盟店，上海、广州、深圳等地都有冒牌货。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 6:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/wrrxl289/djy/blob/master/gb/nsc413_5.md#1<br><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wrrxl289/djy/blob/master/gb/nsc413_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_5.htm">http://www.epochtimes.com/gb/nsc413_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
